[package]
name = "graviton"
version = "0.6.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "Graviton is a fast programming language that is minimal and simplistic with a simple and easy to read compiler. Everything is an expression unless a semicolon is used `;` then it becomes a statement which gives a clear distinction between expressions and statements."
license = "MIT"
readme = "README.md"
exclude = [
    ".vscode/**"
]

[badges]
travis-ci = { repository = "Ralakus/graviton" }

[workspace]
members = ["core", "ast", "frontend"]

[dependencies]
graviton_core     = { path = "core",     version = "0.6.0" }
graviton_ast      = { path = "ast",      version = "0.6.0" }
graviton_frontend = { path = "frontend", version = "0.6.0" }
graviton_backend  = { path = "backend",  version = "0.6.0"}

serde = { version = "*", features = ["derive"] }
rmp-serde = "*"

memmap = "*"

clap = { version = "*", features = [ "suggestions", "color" ] }
colored = "*"