[package]
name = "graviton"
version = "0.6.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "Graviton is a fast programming language that is minimal and simplistic with a simple and easy to read compiler. Everything is an expression unless a semicolon is used `;` then it becomes a statement which gives a clear distinction between expressions and statements."
license = "MIT"
readme = "README.md"
exclude = [
    ".vscode/**"
]

[badges]
travis-ci = { repository = "Ralakus/graviton" }

[workspace]
members = ["core", "ast", "frontend"]

[dependencies]
graviton_core     = { path = "core",     version = "0.6.0" }
graviton_ast      = { path = "ast",      version = "0.6.0" }
graviton_frontend = { path = "frontend", version = "0.6.0" }
graviton_backend  = { path = "backend",  version = "0.6.0"}

serde = { version = "1.0.104", features = ["derive"] }
rmp-serde = "0.14.0"

memmap = "0.7.0"

clap = { version = "2.33.0", features = [ "suggestions", "color" ] }
colored = "1.9.2"