[package]
name = "graviton"
version = "0.7.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

repository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "Graviton is a fast programming language that is minimal and simplistic with a simple and easy to read compiler. Everything is an expression unless a semicolon is used `;` then it becomes a statement which gives a clear distinction between expressions and statements."
license = "MIT"
readme = "readme.md"
exclude = [
    ".vscode/**"
]

[badges]
travis-ci = { repository = "Ralakus/graviton", branch = "stable" }

[workspace]
members = ["core", "frontend", "backend"]

[dependencies]
graviton_core     = { path = "core",     version = "0.7.0" }
graviton_frontend = { path = "frontend", version = "0.7.0" }
graviton_backend  = { path = "backend",  version = "0.7.0" }

memmap = "*"
