[package]
name = "graviton_backend"
version = "0.7.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

repository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The Graviton backend which includes a stack based virtual machine which is now depreciated and a native backend using Cranelift"
license = "MIT"
readme = "readme.md"

[features]
store_names = []

[dependencies]
graviton_core = { path = "../core", version = "0.7.0" }
