[package]
name = "graviton_core"
version = "0.7.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

repository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The core library which handles errors throughout Graviton"
license = "MIT"
readme = "readme.md"

[dependencies]
graviton_ast = { path = "../ast", version = "0.7.0" }
serde = { version = "*", features = ["derive"] }

futures = "*"
colored = "*"