[package]
name = "graviton_core"
version = "0.7.0"
authors = ["Ralakus <mikhail@licas.dev>"]
edition = "2018"

repository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The core library which handles errors throughout Graviton"
license = "MIT"
readme = "readme.md"

[dependencies]
serde = { version = "*", features = ["derive"] }