[package]
name = "graviton_frontend"
version = "0.7.0"
authors = ["Ralakus <mikhail@licas.dev>"]
edition = "2018"

repository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The frontend which contains a simple recursive descent parser with an integrated lexer for Graviton"
license = "MIT"
readme = "readme.md"

[dependencies]
graviton_core = { path = "../core", version = "0.7.0" }

memmap = "*"
lazy_static = "*"