[package]
name = "graviton_ast"
version = "0.3.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The abstract syntax tree data structure used throughout the Graviton language"
license = "MIT"
readme = "README.md"

[features]
node_code_pos = []

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }