[package]
name = "graviton_backend"
version = "0.1.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The backend which includes a stack based virtual machine"
license = "MIT"
readme = "README.md"

[dependencies]
graviton_ast = { path = "../graviton_ast", version = "0.1.0" }

serde = { version = "1.0.98", features = ["derive"] }

cranelift = "0.37.0"

crc16 = "0.4.0"