[package]
name = "graviton_backend"
version = "0.5.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The Graviton backend which includes a stack based virtual machine"
license = "MIT"
readme = "README.md"

[features]
store_names = []

[dependencies]
graviton_ast = { path = "../graviton_ast", version = "0.5.0" }

serde = { version = "1.0.98", features = ["derive"] }
typetag = "0.1.3"

downcast-rs = "1.0.4"

cranelift = "0.37.0"
cranelift-module = "0.37.0"
cranelift-simplejit = "0.37.0"

crc16 = "0.4.0"