[package]
name = "graviton_frontend"
version = "0.2.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The frontend which has the token data structuer, lexer, and parser"
license = "MIT"
readme = "README.md"

[features]
node_code_pos = [ "graviton_ast/node_code_pos" ]

[dependencies]
graviton_ast = { path = "../graviton_ast", version = "0.2.0" }