[package]
name = "graviton_ir"
version = "0.6.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

respository = "https://github.com/Ralakus/graviton"
homepage = "https://github.com/Ralakus/graviton"
description = "The intermediate representation used throughout the Graviton language"
license = "MIT"
readme = "README.md"

[dependencies]
graviton_ast = { path = "../graviton_ast", version = "0.6.0" }