[package]
name = "tachyon_backend"
version = "0.1.0"
authors = ["Ralakus <12schneide@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tachyon_ast = { path = "../tachyon_ast", version = "*" }

serde = { version = "*", features = ["derive"] }

cranelift = "*"